# goit_pyweb_hw_10

./: .dockerignore  Dockerfile  docker-compose.yaml  ervice --no-pager --lines=50  example.env  manage.py  pyproject.toml  pyweb_hw_10.sock  requirements.txt  start.sh  test.py
data/base/1/: 1259  pg_internal.init
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
locale/en_US/LC_MESSAGES/: django.mo  django.po
locale/ru_RU/LC_MESSAGES/: django.mo  django.po
locale/uk_UA/LC_MESSAGES/: django.po
pyweb_hw_10/: _settings.py  asgi.py  settings.py  urls.py  wsgi.py
pyweb_hw_10/settings_/: __init__.py  local.py  production.py
quotes_app/: forms.py  models.py  urls.py  views.py
quotes_app/migrations/: 0001_initial.py  0002_alter_tag_user.py  0003_alter_author_name.py  0004_alter_author_name_alter_tag_user.py  0005_alter_tag_name.py  0006_alter_author_born_location.py
quotes_app/static/quotes_app/: style.css
quotes_app/templates/quotes_app/: base.html  create.html  index.html  parsing.html
quotes_app/templates/quotes_app/author/: details.html  page.html
quotes_app/templates/quotes_app/quote/: details.html  page.html
quotes_app/templates/quotes_app/tag/: details.html  (+2 more)
quotes_app/templatetags/: quote_tags.py
scripts/: build.sh  setup_db.sh  wait_for_db.sh
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_user_delete_customuser.py  0003_alter_profile_avatar.py
users/templates/users/: profile.html  signup.html  user_info.html
