[tool.poetry]
name = "pyweb-hw-10"
version = "0.1.0"
description = ""
authors = ["Ilya Dudelzak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
django-admin = "^2.0.2"
dotenv = "^0.9.9"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
